# cloud-native-korea-lab

./: .gitignore  AGENTS.md  APPLY_PATCH_INSTRUCTIONS.md  CLAUDE.md  README.md  README_20_APPEND.md  README_21_APPEND.md  README_22_APPEND.md  README_23_APPEND.md  README_24_APPEND.md  README_25_APPEND.md  README_26_APPEND.md  README_27_APPEND.md  README_28_APPEND.md  README_29_APPEND.md  README_30_APPEND.md  README_31_APPEND.md  README_33_APPEND.md
career/: README.md  (+1 more)
hyean-gwan/simulation-integration/: .dockerignore  .env.example  AGENTS.md  Dockerfile  README.md  README_41_APPEND.md  docker-compose.ci.yml  docker-compose.yml  pyproject.toml  requirements.txt
hyean-gwan/simulation-integration/app/: __init__.py  main.py
hyean-gwan/simulation-integration/code/: 49_gwan_kubernetes_statefulset_cutover_decision_gate_prompt.md  54_gwan_kubernetes_statefulset_premigration_final_check_prompt.md  55_gwan_kubernetes_statefulset_final_approval_review_prompt.md  56_gwan_kubernetes_statefulset_final_go_nogo_decision_prompt.md  57_gwan_kubernetes_statefulset_approved_migration_execution_plan_prompt.md  58_gwan_kubernetes_statefulset_migration_command_dry_run_prompt.md  59_gwan_kubernetes_statefulset_migration_command_review_prompt.md  60_gwan_kubernetes_statefulset_migration_risk_register_prompt.md  63_gwan_kubernetes_statefulset_backup_freshness_check_prompt.md  64_gwan_kubernetes_statefulset_premigration_data_integrity_check_prompt.md  65_gwan_kubernetes_statefulset_premigration_readiness_summary_prompt.md  66_gwan_kubernetes_statefulset_operator_final_approval_record_prompt.md  (+5 more)
(+381 files in other folders)
