[project]
name = "hyean-gwan-simulation-integration"
version = "0.2.0"
description = "Pydantic models, scoring, and integrated simulation payload generation for HYEAN/GWAN."
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.110",
    "pydantic>=2.7",
    "uvicorn>=0.30",
    "typing-extensions>=4.12",
    "sqlalchemy>=2.0",
    "psycopg[binary]>=3.2",
]

[project.optional-dependencies]
test = [
    "pytest>=8",
    "httpx>=0.27",
]

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]
